feat: agg metodo para consultar todos las opciones
